PUSH NOTE : 2024-09-02 30.md

--- a/src/content/blog/2024-09-02 30.md
+++ b/src/content/blog/2024-09-02 30.md
@@ -1,13 +1,14 @@
 ---
-category: "blog"
+category: blog
 date: 2024-09-02T22:00:00+10:00
-description: "Reflections on turning 30"
+description: Reflections on turning 30
+output: src/content/blog
+publish: true
 slug: "30"
 tags:
-- "meta"
+  - meta
 title: "30"
 ---
-
 It's been about two weeks since I turned 30 so it seems like a pretty fitting milestone to do some sort of retrospective in the vein of [25](https://utf9k.net/blog/25).
 
 30 has always been the "big" milestone in my mind because I've considered it the time when you're meant to "have things figured out" in some sense.
