PUSH NOTE : 2014-10-10 inFamous 2.md

--- a/src/content/reviews/2014-10-10 inFamous 2.md
+++ b/src/content/reviews/2014-10-10 inFamous 2.md
@@ -1,14 +1,15 @@
 ---
-title: "inFamous 2"
+category: reviews
 date: 2014-10-10T21:44:35+13:00
-slug: "infamous-2"
-category: "reviews"
-description: "I felt inFamous 2 did a great job patching up the issues of the original game and enhancing the systems that already worked well!"
+description: I felt inFamous 2 did a great job patching up the issues of the original game and enhancing the systems that already worked well!
+output: src/content/reviews
+publish: true
+slug: infamous-2
 tags:
   - "2011"
-  - "ps3"
+  - ps3
+title: inFamous 2
 ---
-
 Oh gosh, inFamous 2. My first complaint with the original game was the story and how, aside from the collectable dead drops, there wasn't a huge amount of obvious backstory to a lot of what was going on. Well, I was glad to find that in the time between the original title and the sequel, Sucker Punch have improved their writing a huge amount. **Cole now actually had a proper personality to him** which is the first major step towards actually making him someone that you can relate to!
 
 The **pacing of the story was improved hugely**! There's a **long term objective established at the start** so you actually **have something that you feel like you're slowly progressing towards overall** while opening up districts and following the story in the meantime. That and the **ending was much more enjoyable with a proper lead up to the final confrontation** instead of just happening all at once as was the case in the original.
