PUSH NOTE : 2015-05-12 Hiatus.md

--- a/src/content/reviews/2015-05-12 Hiatus.md
+++ b/src/content/reviews/2015-05-12 Hiatus.md
@@ -1,13 +1,14 @@
 ---
-title: "Hiatus"
+category: reviews
 date: 2015-05-12T20:20:22+13:00
-description: "An announcement to say that I was taking a break from writing reviews"
-slug: "hiatus"
-category: "reviews"
+description: An announcement to say that I was taking a break from writing reviews
+output: src/content/reviews
+publish: true
+slug: hiatus
 tags:
-  - "meta"
+  - meta
+title: Hiatus
 ---
-
 Nope, it's not a game but rather, an announcement!
 
 Sadly, since I've been rather busy at my new job, which has way more hours in the week than my previous one, I haven't had much time at all to play anything let alone even do last weekend's post.
