PUSH NOTE : 2015-02-01 D.md

--- a/src/content/reviews/2015-02-01 D.md
+++ b/src/content/reviews/2015-02-01 D.md
@@ -1,7 +1,7 @@
 ---
 category: reviews
 date: 2015-02-01T01:07:51+13:00
-description: D was not an amazing game by today's standards. I didn't find myself hugely enjoying it. I would however invite you to learn about the developement team.
+description: D was not an amazing game by today's standards. I didn't find myself hugely enjoying it. I would however invite you to learn about the development team.
 output: src/content/reviews
 publish: true
 slug: d
@@ -24,7 +24,7 @@ Let's rewind a bit to when I first mentioned Laura. I said she was a digital act
 
 Alrighty, what I really wanted to talk about the most were the hijinks that the development team pulled to actually get this thing released. The story, in particular Dr. Harris's cannibalistic murder spree and the FMVs in the game were considered to be quite gruesome at the time. Kenji Eno, head developer, was worried that the game would suffer poor sales due to an inevitable Adults Only rating. Instead of editing the game, he opted to keep the storyline a secret from other members of the WARP team, submitting an alternate version of the game that had no controversial elements. Once the game had been approved, he deliberately let the submission date for the master copy lapse as the penalty for doing meant that Eno would have to fly to the US and hand deliver the game to the manufacturer. **While in midair, he swapped the alternate version of the game out with the more gruesome final copy which allowed it to slip past any censorship entirely**.
 
-The game went on to sell extremely well in Japan with the Sega Saturn version hitting on the charts but it didn't fare too well in America. Acclaim stepped up to fully localize the title in both the US and Europe on the Saturn, PS1 and MS-DOS which did fairly well. Sony were given confirmation that there were 100,000 units preordered for manufacturing but **Sony opted to spend more resources on in house titles spitting out a mere 28,000 titles of D**, according to Eno. He would later go on to unveil his next title, Enemy Zero, during a Sony conference. Still annoyed at Sony's manufacturing blunder, the trailer behind him ended with the Playstation logo. Much to the audience's amazement, the logo then slowly transitioned into the Sega Saturn logo **with Eno announcing that all of his future titles would be on Sega platforms** where I assume he promptly left the stage. He later stated some years later that a few press members were left confused thinking Eno had just announced that Sony was buying Sega which he thought was humorous.
+The game went on to sell extremely well in Japan with the Sega Saturn version hitting \#1 on the charts but it didn't fare too well in America. Acclaim stepped up to fully localize the title in both the US and Europe on the Saturn, PS1 and MS-DOS which did fairly well. Sony were given confirmation that there were 100,000 units preordered for manufacturing but **Sony opted to spend more resources on in house titles spitting out a mere 28,000 titles of D**, according to Eno. He would later go on to unveil his next title, Enemy Zero, during a Sony conference. Still annoyed at Sony's manufacturing blunder, the trailer behind him ended with the Playstation logo. Much to the audience's amazement, the logo then slowly transitioned into the Sega Saturn logo **with Eno announcing that all of his future titles would be on Sega platforms** where I assume he promptly left the stage. He later stated some years later that a few press members were left confused thinking Eno had just announced that Sony was buying Sega which he thought was humorous.
 
 So there you have it. That's D for you. I suppose you could call it an indie game really since the development team was no more than about 10 members. **I've got some issues with the game and how it has aged but don't get me wrong, I have nothing but respect for the WARP team**. Their later titles would play around with the idea of using sound, rather than visuals as a game input which was perhaps only contested by Seaman at the time. They were a small studio but they weren't afraid to try things out of the ordinary even if their games can be a bit jarring at times. They were even once home to a relatively unknown animator in his late 20s. You might know him now as Fumito Ueda, director of Ico and Shadow of Colossus.
 
